[package]
name = "gleam_style"
version = "0.1.0"
authors = ["lewis"]
description = "Gleam-style lints: no mutation, no loops, functional only"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# No clippy_utils - our lints are simple enough without it
dylint_linting = "5.0.0"

[dev-dependencies]
dylint_testing = "5.0.0"

[workspace]

[package.metadata.rust-analyzer]
rustc_private = true
